# modules/restaurants/src/main/resources/apis/openapi.yml
@@ -132,7 +132,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/MenuItem"
-  /orders/{orderId}/status:
+  /restaurants-orders/{orderId}/status:
     put:
       operationId: updateKitchenOrderStatus
       description: "updateKitchenOrderStatus"
@@ -155,7 +155,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/KitchenOrder"
-  /orders:
+  /restaurants-orders:
     post:
       operationId: searchKitchenOrders
       description: "searchKitchenOrders"
@@ -245,10 +245,12 @@ components:
       type: "string"
       x-business-entity: "KitchenOrderStatus"
       enum:
-      - "RECEIVED"
+      - "ACCEPTED"
+      - "REJECTED"
       - "IN_PROGRESS"
       - "READY"
       - "DELIVERED"
+      - "CANCELLED"
     Address:
       type: "object"
       x-business-entity: "Address"
